# sferic

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  UPDATE.md
.github/workflows/: ci.yml  release.yml  site-deploy.yml
app/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/lib/: audio-analysis.ts  audio-engine.ts  math3d.ts  migrate.ts  mp3-encoder.ts  platform.ts  project-io.ts  render-offline.ts  use-file-drop.ts  use-keyboard-shortcuts.ts  use-menu-events.ts  use-monitoring.ts  use-transport-sync.ts  wav-encoder.ts
app/src/store/: project-store.ts
app/src/types/: project.ts
prompts/: delegate-to-claude.md  delegate-to-codex.md
site/: astro.config.mjs  package.json  pnpm-lock.yaml
site/src/components/: Download.astro  Features.astro  Footer.astro  Hero.astro  Nav.astro  Showcase.astro  Tech.astro
site/src/layouts/: Layout.astro
site/src/lib/: url.ts
tasks/: phase-0-bootstrap.md  phase-1-audio-loading.md  phase-10-audio-analysis-monitoring.md  phase-2-audio-engine.md  phase-3-spatial-ui.md  phase-3b-dual-orthographic-views.md  phase-4-timeline-keyframes.md  phase-5-realtime-preview.md  phase-6-offline-render.md  phase-7-project-persistence.md  phase-8-distribution.md  phase-9-extended-keyframe-properties.md
templates/: .gitignore  Cargo.toml  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
(+31 files in other folders)
