[package]
name = "spatialize"
version = "0.1.0"
description = "Outil multiplateforme pour spatialiser un fichier audio"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "spatialize_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
